--- a/predict.ipynb
+++ b/predict.ipynb
@@ -45,8 +45,11 @@
     "    outputs = model(image)\n",
     "    return outputs\n",
     "\n",
-    "def getPourcentage(a):\n",
-    "    return np.sum(a)/(a.shape[0]*a.shape[1])"
+    "def getSP(mask):\n",
+    "    return np.sum(mask==1)/(mask.shape[0]*mask.shape[1])\n",
+    "\n",
+    "def getOSR(mask):\n",
+    "    return np.sum(mask==2)/(mask.shape[0]*mask.shape[1])"
    ]
   },
   {
@@ -64,7 +67,7 @@
    ],
    "source": [
     "# Load the trained model \n",
-    "model = torch.load(r'C:\\Users\\A60026184\\Desktop\\ModelA\\Results\\weights_Aaug5_v1.pt')\n",
+    "model = torch.load(r'C:\\Users\\A60026184\\Desktop\\ModelB\\Results\\weights_fullBaug5_v2.pt')\n",
     "model.eval()\n",
     "\n",
     "print('DONE Loading models...')"
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,13 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "p_pred = []\n",
+    "SP_pred = []\n",
+    "OSR_pred = []\n",
     "name = []\n",
     "\n",
     "for f in img_files:\n",
@@ -102,7 +106,8 @@
     "    result = get_segment_labels(image, model, device, T_norm)\n",
     "    pred = getPredict(result)\n",
     "    \n",
-    "    p_pred.append(getPourcentage(pred))"
+    "    SP_pred.append(getSP(pred))\n",
+    "    OSR_pred.append(getOSR(pred))"
    ]
   },
   {
@@ -112,12 +117,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df_pred = pd.DataFrame(p_pred, columns= ['Predictions'])\n",
+    "df_SP = pd.DataFrame(SP_pred, columns= ['SP'])\n",
+    "df_OSR = pd.DataFrame(OSR_pred, columns= ['OSR'])\n",
     "df_name = pd.DataFrame(name, columns=['filename'])\n",
     "\n",
-    "df = df_name.join(df_pred)\n",
+    "df = pd.concat([df_name, df_SP, df_OSR], axis=1)\n",
+    "\n",
     "df = df.groupby(['filename']).mean().reset_index()\n",
-    "df.to_csv(outpath+'\\\\Todo_predA.csv')"
+    "df.to_csv(outpath+'\\\\Todo_predB.csv')"
    ]
   },
   {
