--- a/test.ipynb
+++ b/test.ipynb
@@ -43,7 +43,13 @@
     "    image = transform(image).to(device)\n",
     "    image = image.unsqueeze(0) # add a batch dimension\n",
     "    outputs = model(image)\n",
-    "    return outputs"
+    "    return outputs\n",
+    "\n",
+    "def getSP(mask):\n",
+    "    return np.sum(mask==1)/(mask.shape[0]*mask.shape[1])\n",
+    "\n",
+    "def getOSR(mask):\n",
+    "    return np.sum(mask==2)/(mask.shape[0]*mask.shape[1])"
    ]
   },
   {
@@ -52,9 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "num_class = 2\n",
+    "num_class = 3\n",
     "confusion_matrix = np.zeros((num_class,)*2)\n",
     "\n",
     "def Pixel_Accuracy(confusion_matrix):\n",
@@ -107,25 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getPourcentage(a):\n",
-    "    return np.sum(a)/(a.shape[0]*a.shape[1])\n",
-    "\n",
-    "def getGt(gt):\n",
-    "    return np.sum(gt)/(gt.shape[0]*gt.shape[1])\n",
-    "\n",
-    "def getDiff(gt, a):\n",
-    "    p_gt = getGt(gt)\n",
-    "    diff = p_gt  - getPourcentage(a)\n",
-    "    return p_gt, diff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +155,7 @@
    ],
    "source": [
     "# Load the trained model \n",
-    "model = torch.load(r'C:\\Users\\A60026184\\Desktop\\ModelA\\Results\\weights_Aaug5_v0.pt')\n",
+    "model = torch.load(r'C:\\Users\\A60026184\\Desktop\\ModelB\\Results\\weights_cascBaug5_v0.pt')\n",
     "model.eval()\n",
     "\n",
     "print('DONE Loading models...')"
@@ -177,19 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_files = glob(r'C:\\Users\\A60026184\\Desktop\\ModelA\\Test\\Flowers\\Images\\*.*')\n",
-    "msk_path = r'C:\\Users\\A60026184\\Desktop\\ModelA\\Test\\Flowers\\Masks'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model performances"
+    "img_files = glob(r'C:\\Users\\A60026184\\Desktop\\ModelB\\Test\\Rapeseed\\ImgMasked\\*.*')\n",
+    "msk_path = r'C:\\Users\\A60026184\\Desktop\\ModelB\\Test\\Rapeseed\\Join'\n",
+    "pathout = r'H:\\Aurélie\\ModelEval\\ModelB\\Raw\\B1'"
    ]
   },
   {
@@ -198,10 +178,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm = reset(2)\n",
+    "cm = reset(3)\n",
     "\n",
     "for f in img_files:\n",
     "    filename = f.split('\\\\')[-1] #[:8] #Model B full\n",
+    "    #if filename[0]=='0':\n",
+    "    #    filename = filename[1:]\n",
     "    msk = glob(msk_path+'\\\\'+filename)[0]\n",
     "    \n",
     "    # read the image\n",
@@ -209,16 +191,16 @@
     "    # Read  a sample image and mask from the data-set\n",
     "    mask = np.array(Image.open(msk))\n",
     "    \n",
-    "    ### ----------- MODEL A ------------ ###\n",
-    "    if len(mask.shape)>2:\n",
-    "        mask = mask[:,:,0]\n",
-    "    mask[mask<127]=0\n",
-    "    mask[mask>0]=1\n",
+    "    ### ----------- MODEL B ------------ ###\n",
+    "    mask[mask < 127] = 0\n",
+    "    mask[mask > 127] = 1\n",
+    "    mask[mask[:, :, 1] > 0] = 2\n",
+    "    mask = mask[:,:,0]\n",
     "    \n",
     "    result = get_segment_labels(image, model, device, T_norm)\n",
     "    pred = getPredict(result)\n",
     "    \n",
-    "    cm += _generate_matrix(2, mask, pred)\n",
+    "    cm += _generate_matrix(3, mask, pred)\n",
     "\n",
     "Acc_a = Pixel_Accuracy(cm)\n",
     "cAcc_a = Pixel_Accuracy_Class(cm)\n",
@@ -229,32 +211,32 @@
     "      'Class Accuracy \\n', \n",
     "      'Background ', round(cAcc_a[0]*100,2),\n",
     "      '%\\n Vegetation', round(cAcc_a[1]*100,2),\n",
+    "      ### ----------- MODEL B ------------ ###\n",
+    "      '%\\n Oilseed rape', round(cAcc_a[2]*100,2),\n",
     "      '%\\n mean IoU is', round(mIoU*100,2),\n",
     "      '%\\n frequency weighted IoU is ',round(fwIoU*100,2),'%')\n",
     "    "
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model predictions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 99,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "gt = []\n",
-    "pred = []\n",
+    "SP_gt = []\n",
+    "SP_pred = []\n",
+    "OSR_gt = []\n",
+    "OSR_pred = []\n",
     "dat, loc, adv, mod, rep = [], [], [], [], []\n",
     "\n",
     "for f in img_files:\n",
+    "    \n",
     "    filename = f.split('\\\\')[-1]\n",
+    "    #if filename[0]=='0':\n",
+    "    #    filename=filename[1:]\n",
     "    msk = glob(msk_path+'\\\\'+filename)[0]\n",
     "    \n",
     "    filename = filename.split('.')[0]\n",
@@ -269,33 +251,56 @@
     "    image = Image.open(f)\n",
     "    # Read  a sample image and mask from the data-set\n",
     "    mask = np.array(Image.open(msk))\n",
-    "    if len(mask.shape)>2:\n",
-    "        mask = mask[:,:,0]\n",
-    "    mask[mask<=127]=0\n",
-    "    mask[mask>0]=1\n",
+    "    mask[mask < 127] = 0\n",
+    "    mask[mask >= 127] = 1\n",
+    "    mask[mask[:, :, 1] > 0] = 2\n",
+    "    mask = mask[:,:,0]\n",
     "    \n",
     "    result = get_segment_labels(image, model, device, T_norm)\n",
-    "    predict = getPredict(result)\n",
+    "    pred = getPredict(result)  \n",
     "    \n",
-    "    gt.append(getGt(mask))\n",
-    "    pred.append(getPourcentage(predict))"
+    "    SP_gt.append(getSP(mask))\n",
+    "    SP_pred.append(getSP(pred))\n",
+    "    \n",
+    "    OSR_gt.append(getOSR(mask))\n",
+    "    OSR_pred.append(getOSR(pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'9_20200916_Ch_A_M02_4'"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filename"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-105-72e8136f0f36>:20: SettingWithCopyWarning: \n",
+      "<ipython-input-100-5ccab35563f3>:24: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df['DJ'][df['Lieu']=='Md'] = df['Date'][df['Lieu']=='Md'].map(dict_Md)\n",
-      "<ipython-input-105-72e8136f0f36>:21: SettingWithCopyWarning: \n",
+      "<ipython-input-100-5ccab35563f3>:25: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -304,14 +309,18 @@
     }
    ],
    "source": [
-    "df_gt = pd.DataFrame(gt,columns = ['Groundtruth'])\n",
-    "df_pred = pd.DataFrame(pred, columns= ['Predictions'])\n",
+    "import pandas as pd\n",
+    "df_SPgt = pd.DataFrame(SP_gt,columns = ['Gt SP'])\n",
+    "df_OSRgt = pd.DataFrame(OSR_gt,columns = ['Gt OSR'])\n",
     "\n",
-    "abs_err = np.abs(np.array(gt)-np.array(pred))\n",
-    "df_err = pd.DataFrame(abs_err, columns=['Abs err'])\n",
+    "SP_err = np.abs(np.array(SP_gt)-np.array(SP_pred))\n",
+    "OSR_err = np.abs(np.array(OSR_gt)-np.array(OSR_pred))\n",
+    "df_SP = pd.DataFrame(SP_err, columns=['SP_err'])\n",
+    "df_OSR = pd.DataFrame(OSR_err, columns=['OSR_err'])\n",
     "\n",
-    "DJ = np.zeros(np.shape(abs_err))\n",
+    "DJ = np.zeros(np.shape(SP_err))\n",
     "df_DJ = pd.DataFrame(DJ, columns=['DJ'])\n",
+    "\n",
     "\n",
     "df_dat = pd.DataFrame(dat, columns=['Date'])\n",
     "df_loc = pd.DataFrame(loc, columns=['Lieu'])\n",
@@ -320,13 +329,13 @@
     "df_rep = pd.DataFrame(rep, columns=['Rep'])\n",
     "\n",
     "df = pd.concat([df_dat, df_loc, df_adv, df_mod, df_rep,\n",
-    "                df_gt, df_pred, df_err, df_DJ], axis=1)\n",
+    "                df_SPgt, df_SP, df_OSRgt, df_OSR, df_DJ], axis=1)\n",
     "df = df.groupby(['Date', 'Lieu', 'Type', 'Moda', 'Rep']).mean().reset_index()\n",
     "\n",
     "df['DJ'][df['Lieu']=='Md'] = df['Date'][df['Lieu']=='Md'].map(dict_Md)\n",
     "df['DJ'][df['Lieu']!='Md'] = df['Date'][df['Lieu']!='Md'].map(dict_Pr)\n",
     "\n",
-    "df.to_csv(r'H:\\Aurélie\\ModelEval\\ModelA\\Raw\\flowers_Av0.csv')"
+    "df.to_csv(pathout + '\\\\rapeseed_Bv0.csv')"
    ]
   },
   {
